# DGR-Midstate-pool-Public

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  TRADEMARK.md  config.example.toml  install-midstate-miner.bat  install-midstate-miner.sh  midstate-dashboard.bat  midstate-dashboard.sh  mine-auto.bat  mine-auto.sh  mine-multi-gpu.sh
.cargo/: config.toml
.github/workflows/: release.yml
docs/: MINING-GUIDE.md
examples/: bench_backend.rs
src/: backend.rs  client.rs  cuda_backend.rs  endpoint.rs  hybrid.rs  lib.rs  main.rs  mode.rs  opencl_backend.rs  pow.rs  stratum.rs  target.rs  threads.rs  wgpu_backend.rs
src/cuda/: build_ptx.sh  midstate.cu  midstate.ptx
src/opencl/: midstate.cl  selftest.c
tests/: cuda_verify.rs  wgpu_verify.rs
