[package]
name = "midstate-pool-miner"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "Open-source pool miner for Midstate (post-quantum, BLAKE3 sequential-VDF PoW). Pool-only, endpoint-locked."
repository = "https://github.com/dangraagu/DGR-Midstate-pool-Public"
publish = false

[lib]
name = "midstate_miner"
path = "src/lib.rs"

[[bin]]
name = "midstate-miner"
path = "src/main.rs"

# The CUDA backend (cudarc + committed PTX, behind a `cuda` feature) lands next.

[features]
# Off by default → toolkit-free CPU-only build. `--features opencl` adds the
# OpenCL GPU backend (links the system OpenCL ICD loader).
opencl = ["dep:opencl3"]

[dependencies]
blake3 = "1.5"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
num_cpus = "1"
opencl3 = { version = "0.9", optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
debug = false
panic = "unwind"
