[package]
name = "midstate-pool-miner"
version = "0.1.9"
edition = "2021"
license-file = "LICENSE"
description = "Open-source pool miner for Midstate (post-quantum, BLAKE3 sequential-VDF PoW). Pool-only, endpoint-locked."
repository = "https://github.com/dangraagu/DGR-Midstate-pool-Public"
publish = false

[lib]
name = "midstate_miner"
path = "src/lib.rs"

[[bin]]
name = "midstate-miner"
path = "src/main.rs"

# The CUDA backend (cudarc + committed PTX, behind a `cuda` feature) is the native
# path for rented NVIDIA CUDA-compute containers where wgpu/Vulkan is unavailable.

[features]
# Off by default → toolkit-free CPU-only build (Defender-safe fleet rule).
# `--features opencl` adds the OpenCL GPU backend (links the system OpenCL ICD
# loader). `--features wgpu` adds the wgpu/WGSL GPU backend (Vulkan/DX12/Metal/GL;
# no CUDA/OpenCL toolkit needed). `--features cuda` adds the CUDA backend via
# `cudarc` with DYNAMIC-LOADING: it dlopen()s the driver (libcuda) at RUNTIME and
# JIT-compiles the committed PTX (src/cuda/midstate.ptx), so the build needs NO
# CUDA toolkit on the link path — only the committed PTX + the driver on the rig.
# All three are mutually compatible but a release binary picks one; the default
# CPU-only build pulls in NONE.
opencl = ["dep:opencl3"]
wgpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
cuda = ["dep:cudarc"]

[dependencies]
blake3 = "1.5"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
num_cpus = "1"
opencl3 = { version = "0.9", optional = true }
# wgpu GPU backend deps — optional, only compiled under `--features wgpu`.
wgpu = { version = "29", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
# CUDA GPU backend dep — optional, only compiled under `--features cuda`.
# `dynamic-loading` = dlopen libcuda at RUNTIME (no CUDA toolkit on the link path,
# so the Linux/CI build needs only the committed PTX + the driver on the rig).
# `cuda-12080` pins the driver-API bindings to a widely-available baseline; the
# driver is forward-compatible, so newer rig drivers JIT the compute_75 PTX fine.
cudarc = { version = "0.19", default-features = false, features = ["driver", "nvrtc", "dynamic-loading", "cuda-12080"], optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
debug = false
panic = "unwind"
